# tiferet-monday

./: .gitignore  HANDOFF.md  git.py  i_ching.py  i_ching_tui.py  manage_dev_branch.py  monday.py  monday_app.py  pyproject.toml  requirements.txt  setup.py  task.py  tiferet_composer_tui.py  tiferet_monday.py  write_code_to_doc.py
.github/workflows/: python-publish.yml
app/commands/: board.py  item.py
app/configs/: container.yml  error.yml  feature.yml
app/contracts/: board.py  item.py
tests/: test_column_values.py  test_domain.py  test_events.py  test_graphql.py  test_repos.py
tiferet_monday/: __init__.py
tiferet_monday/assets/: __init__.py  constants.py
tiferet_monday/clients/: __init__.py  monday.py
tiferet_monday/commands/: __init__.py  board.py  doc.py  item.py
tiferet_monday/configs/: app.yml  container.yml  error.py  error.yml  feature.yml  logging.yml
tiferet_monday/contexts/: __init__.py  app.py  board.py  feature.py  item.py  settings.py  user.py
tiferet_monday/contracts/: __init__.py  board.py  doc.py  item.py
tiferet_monday/data/: __init__.py  board.py  column_value.py  doc.py  item.py
tiferet_monday/domain/: __init__.py  board.py  column_value.py  item.py  settings.py  tag.py  user.py  webhook.py  workspace.py
tiferet_monday/events/: board.py  item.py  settings.py  tag.py  update.py  user.py  webhook.py  workspace.py
tiferet_monday/interfaces/: __init__.py  board.py  item.py  settings.py  tag.py  update.py  user.py  webhook.py  workspace.py
tiferet_monday/mappers/: column_value.py  settings.py
tiferet_monday/models/: board.py  (+4 more)
(+36 files in other folders)
