[project]
name = "tiferet-monday"
dynamic = ["version"]  # Mark version as dynamic
description = "A client library for interacting with the Monday.com API using Tiferet."
authors = [
    { name = "Andrew Shatz, Great Strength Systems", email = "andrew@greatstrength.me" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tiferet>=1.1.1",
    "requests>=2.32.4",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/greatstrength/tiferet-monday"
Repository = "https://github.com/greatstrength/tiferet-monday"
Download = "https://github.com/greatstrength/tiferet-monday"

[project.optional-dependencies]
test = [
    "pytest>=8.3.3",
    "pytest_env>=1.1.5"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "tiferet_monday",
    "tiferet_monday.assets",
    "tiferet_monday.contexts",
    "tiferet_monday.domain",
    "tiferet_monday.events",
    "tiferet_monday.interfaces",
    "tiferet_monday.mappers",
    "tiferet_monday.repos",
    "tiferet_monday.utils",
]

[tool.setuptools.dynamic]
version = { attr = "tiferet_monday.__version__" }